k8s/services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: people-service-web-app-ing
  annotations:
    ingress.kubernetes.io/add-base-url: 'true'
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: people-web-app
            port:
              number: 5000
